<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/tab_bar_bg"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/rl_tab_playing"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/tab_bg"
            android:clickable="true"
            android:focusable="true"
            android:padding="12dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/tab_bar_playing"
                android:textColor="@color/main_blue_light"
                android:textSize="16sp" />
        </RelativeLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:scaleType="fitCenter"
            android:src="@drawable/tab_bar_divider" />

        <RelativeLayout
            android:id="@+id/rl_tab_local"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/tab_bg"
            android:clickable="true"
            android:focusable="true"
            android:padding="12dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/tab_bar_local"
                android:textColor="@color/main_blue_light"
                android:textSize="16sp" />
        </RelativeLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:scaleType="fitCenter"
            android:src="@drawable/tab_bar_divider" />

        <RelativeLayout
            android:id="@+id/rl_tab_online"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/tab_bg"
            android:clickable="true"
            android:focusable="true"
            android:padding="12dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/tab_bar_online"
                android:textColor="@color/main_blue_light"
                android:textSize="16sp" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/rl_tab_indicator1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="visible" >

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:scaleType="fitXY"
                android:src="@drawable/tab_bottom_bar" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_tab_indicator2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="invisible" >

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:scaleType="fitXY"
                android:src="@drawable/tab_bottom_bar" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_tab_indicator3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="invisible" >

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:scaleType="fitXY"
                android:src="@drawable/tab_bottom_bar" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>