<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/main_background"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <FrameLayout
                android:id="@+id/fl_cover_lrc_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="70dip" >

                <com.cupfish.musicplayer.ui.view.MyImageView
                    android:id="@+id/iv_album_cover"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:focusable="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/start_cover_default" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/white_gradient_bg"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/tv_song_singer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginRight="80dp"
                        android:ellipsize="end"
                        android:paddingLeft="15dip"
                        android:paddingTop="2dip"
                        android:singleLine="true"
                        android:text="@string/love_music"
                        android:textColor="@color/main_blue_light"
                        android:textSize="30sp" />

                    <ImageView
                        android:id="@+id/iv_playlist_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dip"
                        android:clickable="true"
                        android:focusable="true"
                        android:src="@drawable/playlist_default" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/tv_song_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="120dp"
                    android:ellipsize="end"
                    android:paddingLeft="15dip"
                    android:paddingTop="2dip"
                    android:singleLine="true"
                    android:text="@string/love_life"
                    android:textColor="@color/main_blue_light"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_song_album"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="150dp"
                    android:ellipsize="end"
                    android:paddingBottom="5dp"
                    android:paddingLeft="15dip"
                    android:paddingTop="5dip"
                    android:singleLine="true"
                    android:textColor="@color/main_blue_light"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_single_lrc_container"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="#33333333"
                android:orientation="vertical"
                android:layout_marginBottom="30dp" >

                <TextSwitcher
                    android:id="@+id/ts_lrc"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="#00000000"
                    android:padding="5dip" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:background="@color/main_blue_light" />
            </LinearLayout>
        </RelativeLayout>

        <android.gesture.GestureOverlayView
            android:id="@+id/myGestureView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#33333333"
            android:focusableInTouchMode="true"
            android:gestureColor="@color/main_blue_light"
            android:gestureStrokeType="multiple"
            android:orientation="horizontal"
            android:uncertainGestureColor="@color/yellow_light"
            android:visibility="gone" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/iv_player_play_pause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/player_play_btn_selector" />

            <ImageView
                android:id="@+id/iv_player_previous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/iv_player_play_pause"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/player_pre_btn_selector" />

            <ImageView
                android:id="@+id/iv_volume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_toLeftOf="@id/iv_player_previous"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/volume_default" />

            <ImageView
                android:id="@+id/iv_player_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_toRightOf="@id/iv_player_play_pause"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/player_next_btn_selector" />

            <ImageView
                android:id="@+id/iv_guesture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:layout_toRightOf="@id/iv_player_next"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/gesture" />
        </RelativeLayout>

        <SeekBar
            android:id="@+id/sb_player_progress"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:progress="0"
            android:progressDrawable="@drawable/scrubber_progress_horizontal_holo_light"
            android:thumb="@drawable/scrubber_control_selector_holo"
            android:thumbOffset="15dp" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dip" >

            <TextView
                android:id="@+id/tv_current_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dip"
                android:text="@string/mm_ss_zero"
                android:textColor="@color/main_blue_light"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_total_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dip"
                android:text="@string/mm_ss_zero"
                android:textColor="@color/main_blue_light"
                android:textSize="12sp" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>